garde_derive_tests/tests/compile-fail/dive_with_rules.stderr
error: `length` may not be used together with `dive`
 --> tests/compile-fail/dive_with_rules.rs:9:19
  |
9 |     #[garde(dive, length(min = 1))]
  |                   ^^^^^^
